refactor:  Diary 클래스 리팩토링, PaintingImage 패키지 제거 (#9)
* refactor: Diary 클래스 리팩토링

- 필드 isFavorite 자료형 Boolean → boolean 로 변경
- 필드 diaryDate 자료형 LocalDateTime → LocalDate 로 변경
- equals(), hashcode() 오버라이딩

* refactor: Diary 클래스 리팩토링, PaintingImage 패키지 제거

- PaintingImage 클래스 제거
    → List<PaintingImage> 필드를 List<URL> 로 변경
    → List<URL> 을 실제 데이터베이스 테이블에서는 “a.com, b.com”(반정규화) 으로 관리하기 위해 `UrlListToStringConverter` 객체 생성

* chore: 필요 없는 import 제거

* refactor: DiaryService 클래스 updateDiary() 메서드 수정

다이어리 수정 시, 이전에 있던 다이어리 이미지를 바꾸는 부분을 서버가 주도권을 잡도록 변경

* refactor: 객체 생성, 수정 시간 BaseEntity 로 변경

* refactor: 객체 생성, 수정 시간 BaseEntity 로 변경

* chore: todo 지정

* chore: 필요없는 import 제거

* fix: baseEntity 적용 안된 부분 변경

* feat: 이미지 변경하는 코드 추가

일기 생성 시 추가 되는 컬럼
content, isFavorite, hashtagIds, diaryDate, createdDateTime, character, member

일기 생성 후 이벤트 요청 후 응답해서 추가되는 컬럼
paintingImages, modifiedDateTime

* chore: todo 추가

* refactor: BaseEntity 패키지 수정

* chore: 주석 추가 및 필요 없는 롬복 제거

* refactor: 코드 리뷰 반영